# knowledgeMesh

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.relay  README.md  go.mod  go.sum
cmd/buyer/: main.go
cmd/control/: main.go
cmd/demo/: main.go
cmd/knowledgeMesh/: main.go
cmd/relay/: main.go
cmd/seller/: main.go
configs/: dev.yaml
docs/: BUYER_GUIDE.md  SELLER_GUIDE.md  SETUP.md  debug-relay-stream-failure.md
examples/local-demo/: sellers-catalog.json
internal/api/: server.go
internal/buyer/: command.go  commands.go  session.go  state.go
internal/control/: api.go  billing_tx.go  buyer_http.go  client.go  command.go  defaults.go  defaults_test.go  http_auth.go  inference_http.go  jwt.go  jwt_seller.go  migrate.go  postgres.go  postgres_billing.go  postgres_seller.go  records.go  schema.go  seller_http.go  serve.go  serve_test.go
internal/matchmaker/: matchmaker.go
internal/mesh/: debug.go  runtime.go  serve.go
internal/network/: account_identity.go  account_identity_test.go  connection_type.go  defaults.go  holepunch_manager.go  hostconfig.go  identity_file.go  identity_file_test.go  message_router.go  network.go  network_monitor.go  observability.go  p2p_debug.go  p2p_debug_http.go  p2p_debug_report.go  reachability_startup.go  relay_upgrade.go
internal/policy/: policy.go
internal/relay/: identity.go  identity_test.go  serve.go  tracer.go
internal/sandbox/: runner.go  (+1 more)
old_mvp/km/cli/: Cargo.toml
old_mvp/km/cli/src/: main.rs
old_mvp/km/sdk/python/: pyproject.toml
old_mvp/km/sdk/python/knowledgemesh/: __init__.py  cli.py  client.py
old_mvp/km/worker/: Cargo.toml  Dockerfile
old_mvp/km/worker/src/: config.rs  fabric.rs  handlers.rs  main.rs  models.rs  setup.rs  tunnel.rs
old_mvp/km/worker/src/bridge/: anthropic.rs  mod.rs  ollama.rs  openai.rs  session.rs  subscription.rs
old_mvp/km/worker/src/keychain/: mod.rs
old_mvp/km/worker/src/tokens/: mod.rs
(+95 files in other folders)
