[package]
name = "km-worker"
version = "0.1.0"
edition = "2021"
description = "KnowledgeMesh worker node — local inference proxy"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client (calling Anthropic API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async streaming
futures = "0.3"
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# HMAC authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
hostname = "0.4"

# macOS Keychain (only on macOS)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
