[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgemesh"
version = "0.1.0"
description = "Python SDK for KnowledgeMesh — peer-to-peer AI inference network"
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.scripts]
km-chat = "knowledgemesh.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
